# aieng-auth

./: .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.changeset/: add-react-readme.md  fix-readme-package-name.md
.github/workflows/: code_checks.yml  publish.yml  unit_tests.yml
apps/demo-nextjs/: .env.example  CHANGELOG.md  README.md  package.json
apps/demo-nextjs/src/app/: globals.css  layout.tsx  page.tsx
apps/demo-nextjs/src/app/api/auth/callback/: route.ts
apps/demo-nextjs/src/app/api/auth/login/: route.ts
apps/demo-nextjs/src/app/api/auth/logout/: route.ts
apps/demo-nextjs/src/app/api/auth/session/: route.ts
apps/demo-nextjs/src/app/dashboard/: page.tsx
apps/demo-nextjs/src/components/: login-button.tsx  logout-button.tsx
apps/demo-nextjs/src/lib/: auth-config.ts  session.ts
apps/demo-react/: .env.example  CHANGELOG.md  README.md  SETUP.md  SETUP_GCLOUD.md  index.html  package.json
apps/demo-react/src/: App.tsx  index.css  vite-env.d.ts
apps/demo-react/src/pages/: callback-page.tsx  dashboard-page.tsx  demo-page.tsx  home-page.tsx
